# Hermes

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Hermes.md  Makefile  README.md  TELEMETRY_AND_QUALITY.md  analysis_and_next_steps.md  config.toml.example  generate_test_datasets.py  pyproject.toml  test_excel_accuracy_synthetic.xlsx  test_excel_stress_synthetic.xlsx
.dev/: DEFERRED.md  EVAL.md  Hermes.md  evaluation-and-health-metrics-roadmap.md  main.md  path.md  scalability_lessons.md  small_notes.md  system-audit.md  wbn.md
.dev/audits/: 2026-04-16-eval-part-a.md  2026-04-17-part-b-b-plan.md
.dev/eval/: T10-packet.md  T2-packet.md  T5-packet.md  T6-packet.md  T7-abstention-decision-log.md  T8-decision-log.md  T8-packet.md  eval-plan.md
.dev/part_b/: b-plan.md
.dev/test_results/: terminal_output_cloud_results_4_09
.github/workflows/: ci.yml
benchmarks/: 20260417_ab403fd.json  20260417_afb5e93.json
hermes/: __init__.py  __main__.py  cli.py  config.py  db.py  dedup.py  models.py  user_schemas.py
hermes/bench/: __init__.py  runner.py  workloads.py
hermes/eval/: __init__.py  manifest.py  normalize.py  runner.py  scorer.py
hermes/extraction/: contract_identity.py  llm_client.py  pipeline.py  prompts.py  validator.py
hermes/ingestion/: pages_spec.py  preflight.py  storage.py
hermes/migrations/: 003_pages_spec.sql  004_job_dedup.sql  005_extraction_contracts.sql
hermes/normalization/: chunker.py  excel.py  pdf_ocr.py  pdf_text.py  router.py
hermes/obs/: __init__.py  logging.py  sampling.py  schema.py
hermes/schemas/: discover.py  loader.py
migrations/: 001_initial.sql  002_normalization_error.sql
tests/: conftest.py  generate_fixtures.py  test_bench_runner.py  test_cli.py  test_config.py  test_contract_identity.py  test_db.py  test_discover.py  test_eval_exports.py  test_eval_fixtures.py  test_eval_manifest.py  test_eval_normalize.py  test_eval_regression.py  test_eval_resume_integration.py  test_eval_runner.py  test_eval_scorer.py  test_job_dedup.py  test_llm_client.py  test_normalization.py  test_obs_config.py  test_obs_logging.py  test_obs_sampling.py  test_obs_schema.py  test_pages_spec.py  test_pdf_ocr.py  test_pipeline_integration.py  test_preflight.py  test_prompts.py  test_schema_loader.py  test_storage.py  test_user_schemas.py  test_validator.py
tests/fixtures/: empty.xlsx  (+1 more)
(+44 files in other folders)
