[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes"
version = "0.1.0"
description = "Local-first, memory-safe, LLM-powered document extraction engine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "litellm>=1.30",
]

[project.optional-dependencies]
obs = [
    "structlog>=24",
    "psutil>=5.9",
]
tiktoken = [
    "tiktoken>=0.7",
]
ocr = [
    "surya-ocr>=0.4",
    "easyocr>=1.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-openpyxl>=3.1",
]

[project.scripts]
hermes = "hermes.cli:app_entry"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

# Optional OCR stack is not installed in default / CI dev envs.
[[tool.mypy.overrides]]
module = "surya.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "easyocr"
ignore_missing_imports = true

# Pillow comes with the optional `ocr` extra, not default/CI dev installs.
[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["hermes"]
